--- a/LIQ19_CodigoVB/Tomza_VS/LIQ19_Liquidaciones.vbproj
+++ b/LIQ19_CodigoVB/Tomza_VS/LIQ19_Liquidaciones.vbproj
@@ -158,6 +158,16 @@
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="1_Codigo_VS_v001_20190221\Variable_Gl.vb" />
+    <Compile Include="3_LIQ19_VS\1_Catalogos\FO_PRUEBA.Designer.vb">
+      <DependentUpon>FO_PRUEBA.vb</DependentUpon>
+    </Compile>
+    <Compile Include="3_LIQ19_VS\1_Catalogos\FO_PRUEBA.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Base\Conexion.vb" />
+    <Compile Include="Base\Listado.vb" />
+    <Compile Include="Base\Mensaje.vb" />
+    <Compile Include="Base\Movimiento.vb" />
     <Compile Include="My Project\Resources.Designer.vb">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -714,6 +724,9 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="3_LIQ19_VS\1_Catalogos\FO_PRUEBA.resx">
+      <DependentUpon>FO_PRUEBA.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="My Project\Resources.resx">
       <Generator>VbMyResourcesResXFileCodeGenerator</Generator>
       <CustomToolNamespace>My.Resources</CustomToolNamespace>
