--- a/LIQ19_CodigoVB/Tomza_VS/LIQ19_Liquidaciones.vbproj
+++ b/LIQ19_CodigoVB/Tomza_VS/LIQ19_Liquidaciones.vbproj
@@ -133,24 +133,24 @@
     <Import Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Codigo_VS_v002_201902\Codigo_ABC.vb" />
-    <Compile Include="Codigo_VS_v002_201902\Codigo_BT.vb" />
-    <Compile Include="Codigo_VS_v002_201902\Codigo_Correo.vb" />
-    <Compile Include="Codigo_VS_v002_201902\Codigo_General.vb" />
-    <Compile Include="Codigo_VS_v002_201902\Codigo_Imprimir.vb" />
-    <Compile Include="Codigo_VS_v002_201902\Codigo_Lector.vb" />
-    <Compile Include="Codigo_VS_v002_201902\Codigo_Mensaje.vb" />
-    <Compile Include="Codigo_VS_v002_201902\Codigo_PB.vb" />
-    <Compile Include="Codigo_VS_v002_201902\Codigo_CB.vb" />
-    <Compile Include="Codigo_VS_v002_201902\Codigo_CTRL.vb" />
-    <Compile Include="Codigo_VS_v002_201902\Codigo_FI.vb" />
-    <Compile Include="Codigo_VS_v002_201902\Codigo_FRM.vb" />
-    <Compile Include="Codigo_VS_v002_201902\Codigo_LI.vb" />
-    <Compile Include="Codigo_VS_v002_201902\Codigo_Permiso.vb" />
-    <Compile Include="Codigo_VS_v002_201902\Codigo_SQL.vb" />
-    <Compile Include="Codigo_VS_v002_201902\Codigo_Tabla.vb" />
-    <Compile Include="Codigo_VS_v002_201902\Codigo_XML_V2.vb" />
-    <Compile Include="Codigo_VS_v002_201902\Codigo_XML_V1.vb" />
+    <Compile Include="Codigo_VS_v002_201902\Codigo\Codigo_ABC.vb" />
+    <Compile Include="Codigo_VS_v002_201902\Codigo\Codigo_BT.vb" />
+    <Compile Include="Codigo_VS_v002_201902\Codigo\Codigo_Correo.vb" />
+    <Compile Include="Codigo_VS_v002_201902\Codigo\Codigo_General.vb" />
+    <Compile Include="Codigo_VS_v002_201902\Codigo\Codigo_Imprimir.vb" />
+    <Compile Include="Codigo_VS_v002_201902\Codigo\Codigo_Lector.vb" />
+    <Compile Include="Codigo_VS_v002_201902\Codigo\Codigo_Mensaje.vb" />
+    <Compile Include="Codigo_VS_v002_201902\Codigo\Codigo_PB.vb" />
+    <Compile Include="Codigo_VS_v002_201902\Codigo\Codigo_CB.vb" />
+    <Compile Include="Codigo_VS_v002_201902\Codigo\Codigo_CTRL.vb" />
+    <Compile Include="Codigo_VS_v002_201902\Codigo\Codigo_FI.vb" />
+    <Compile Include="Codigo_VS_v002_201902\Codigo\Codigo_FRM.vb" />
+    <Compile Include="Codigo_VS_v002_201902\Codigo\Codigo_LI.vb" />
+    <Compile Include="Codigo_VS_v002_201902\Codigo\Codigo_Permiso.vb" />
+    <Compile Include="Codigo_VS_v002_201902\Codigo\Codigo_SQL.vb" />
+    <Compile Include="Codigo_VS_v002_201902\Codigo\Codigo_Tabla.vb" />
+    <Compile Include="Codigo_VS_v002_201902\Codigo\Codigo_XML_V2.vb" />
+    <Compile Include="Codigo_VS_v002_201902\Codigo\Codigo_XML_V1.vb" />
     <Compile Include="Codigo_VS_v002_201902\Constantes_Sistema.vb" />
     <Compile Include="Codigo_VS_v002_201902\Controls\ProgressBarPanel.vb" />
     <Compile Include="Codigo_VS_v002_201902\Controls\ProgressBarEx.vb" />
@@ -159,15 +159,16 @@
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="Codigo_VS_v002_201902\Variable_Gl.vb" />
-    <Compile Include="LIQ19_VS\0_Generales\FO_Login.Designer.vb">
+    <Compile Include="Codigo_VS_v002_201902\Formas\FO_Login.Designer.vb">
       <DependentUpon>FO_Login.vb</DependentUpon>
     </Compile>
-    <Compile Include="LIQ19_VS\0_Generales\FO_Login.vb">
+    <Compile Include="Codigo_VS_v002_201902\Formas\FO_Login.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="LIQ19_VS\0_Generales\LIQ19_Codigo.vb" />
     <Compile Include="LIQ19_VS\0_Generales\LIQ19_Constantes.vb" />
     <Compile Include="LIQ19_VS\0_Generales\PRINT_MICROSOFT_REPORT.vb" />
+    <Compile Include="LIQ19_VS\0_Generales\SYS_SetUp.vb" />
     <Compile Include="LIQ19_VS\1_Catalogos\FO_LIQUIDACION.Designer.vb">
       <DependentUpon>FO_LIQUIDACION.vb</DependentUpon>
     </Compile>
@@ -201,16 +202,16 @@
     <Compile Include="LIQ19_VS\1_Catalogos\FO_PUNTO_VENTA.vb">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="LIQ19_VS\0_Generales\FO_BOARD2.Designer.vb">
-      <DependentUpon>FO_BOARD2.vb</DependentUpon>
+    <Compile Include="Codigo_VS_v002_201902\Formas\FO_Escritorio.Designer.vb">
+      <DependentUpon>FO_Escritorio.vb</DependentUpon>
     </Compile>
-    <Compile Include="LIQ19_VS\0_Generales\FO_BOARD2.vb">
+    <Compile Include="Codigo_VS_v002_201902\Formas\FO_Escritorio.vb">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="LIQ19_VS\0_Generales\FO_SPLASH3.Designer.vb">
-      <DependentUpon>FO_SPLASH3.vb</DependentUpon>
+    <Compile Include="Codigo_VS_v002_201902\Formas\FO_Splash.Designer.vb">
+      <DependentUpon>FO_Splash.vb</DependentUpon>
     </Compile>
-    <Compile Include="LIQ19_VS\0_Generales\FO_SPLASH3.vb">
+    <Compile Include="Codigo_VS_v002_201902\Formas\FO_Splash.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="My Project\AssemblyInfo.vb" />
@@ -223,21 +224,21 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <Compile Include="LIQ19_VS\0_Generales\Resultado.designer.vb">
-      <DependentUpon>Resultado.vb</DependentUpon>
+    <Compile Include="Codigo_VS_v002_201902\Formas\FO_Resultado.designer.vb">
+      <DependentUpon>FO_Resultado.vb</DependentUpon>
     </Compile>
-    <Compile Include="LIQ19_VS\0_Generales\Resultado.vb">
+    <Compile Include="Codigo_VS_v002_201902\Formas\FO_Resultado.vb">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="LIQ19_VS\0_Generales\UC_MENU2.Designer.vb">
-      <DependentUpon>UC_MENU2.vb</DependentUpon>
+    <Compile Include="LIQ19_VS\0_Generales\UC_MENU_GENERAL.Designer.vb">
+      <DependentUpon>UC_MENU_GENERAL.vb</DependentUpon>
     </Compile>
-    <Compile Include="LIQ19_VS\0_Generales\UC_MENU2.vb">
+    <Compile Include="LIQ19_VS\0_Generales\UC_MENU_GENERAL.vb">
       <SubType>UserControl</SubType>
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="LIQ19_VS\0_Generales\FO_Login.resx">
+    <EmbeddedResource Include="Codigo_VS_v002_201902\Formas\FO_Login.resx">
       <DependentUpon>FO_Login.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="LIQ19_VS\0_Generales\Reportes_rdlc\RPT_01_RECIBO_X1.rdlc" />
@@ -261,17 +262,17 @@
     <EmbeddedResource Include="LIQ19_VS\1_Catalogos\FO_PUNTO_VENTA.resx">
       <DependentUpon>FO_PUNTO_VENTA.vb</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="LIQ19_VS\0_Generales\FO_BOARD2.resx">
-      <DependentUpon>FO_BOARD2.vb</DependentUpon>
+    <EmbeddedResource Include="Codigo_VS_v002_201902\Formas\FO_Escritorio.resx">
+      <DependentUpon>FO_Escritorio.vb</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="LIQ19_VS\0_Generales\FO_SPLASH3.resx">
-      <DependentUpon>FO_SPLASH3.vb</DependentUpon>
+    <EmbeddedResource Include="Codigo_VS_v002_201902\Formas\FO_Splash.resx">
+      <DependentUpon>FO_Splash.vb</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="LIQ19_VS\0_Generales\Resultado.resx">
-      <DependentUpon>Resultado.vb</DependentUpon>
+    <EmbeddedResource Include="Codigo_VS_v002_201902\Formas\FO_Resultado.resx">
+      <DependentUpon>FO_Resultado.vb</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="LIQ19_VS\0_Generales\UC_MENU2.resx">
-      <DependentUpon>UC_MENU2.vb</DependentUpon>
+    <EmbeddedResource Include="LIQ19_VS\0_Generales\UC_MENU_GENERAL.resx">
+      <DependentUpon>UC_MENU_GENERAL.vb</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
@@ -670,6 +671,8 @@
     <Content Include="Resources\Imagenes\pipa.png" />
     <Content Include="Resources\Imagenes\pipacorta.png" />
     <Content Include="Resources\Imagenes\refineria2.png" />
+    <None Include="Resources\IMG_Splash_Titulo.png" />
+    <None Include="Resources\IMG_Menu_Titulo.png" />
     <Content Include="Resources\LIQ19_png\IMG_AGATA.png" />
     <Content Include="Resources\LIQ19_png\IMG_AGATA2.png" />
     <Content Include="Resources\LIQ19_png\IMG_AGATA_1_NoSeUsa.png" />
@@ -697,6 +700,7 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="bin\" />
     <Folder Include="Prototipos\" />
     <Folder Include="PYF18_VS\" />
   </ItemGroup>
