--- a/LIQ19_CodigoVB/Tomza_VS/LIQ19_Liquidaciones.vbproj
+++ b/LIQ19_CodigoVB/Tomza_VS/LIQ19_Liquidaciones.vbproj
@@ -182,6 +182,12 @@
     <Compile Include="LIQ19_VS\1_Catalogos\FO_FICHA_ESTACION_CARBURACION.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="LIQ19_VS\1_Catalogos\FO_FICHA_PORTATIL.Designer.vb">
+      <DependentUpon>FO_FICHA_PORTATIL.vb</DependentUpon>
+    </Compile>
+    <Compile Include="LIQ19_VS\1_Catalogos\FO_FICHA_PORTATIL.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="LIQ19_VS\1_Catalogos\FO_LIQUIDACION.Designer.vb">
       <DependentUpon>FO_LIQUIDACION.vb</DependentUpon>
     </Compile>
@@ -274,6 +280,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="LIQ19_VS\1_Catalogos\FO_FICHA_ESTACION_CARBURACION.resx">
       <DependentUpon>FO_FICHA_ESTACION_CARBURACION.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="LIQ19_VS\1_Catalogos\FO_FICHA_PORTATIL.resx">
+      <DependentUpon>FO_FICHA_PORTATIL.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="LIQ19_VS\1_Catalogos\FO_LIQUIDACION.resx">
       <DependentUpon>FO_LIQUIDACION.vb</DependentUpon>
